metadata/force-app/main/default/objects/User/fields/Ability_to_Clone_Account__c.field-meta.xml
<CustomField>
    <fullName>Ability_to_Clone_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BODEV-1599: Checkbox to control the visibility of &quot;Clone Account&quot; button on Account Lightning Record Page.</description>
    <inlineHelpText>Tick this checkbox to enable Clone Account for non-admin profile users.</inlineHelpText>
    <label>Ability to Clone Account</label>
    <type>Checkbox</type>
</CustomField>