metadata/force-app/main/default/objects/User/fields/Active_BDR__c.field-meta.xml
<CustomField>
    <fullName>Active_BDR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this user an active BDR?</description>
    <inlineHelpText>Is this user an active BDR?</inlineHelpText>
    <label>Active BDR</label>
    <type>Checkbox</type>
</CustomField>