metadata/force-app/main/default/objects/User/fields/Active_Sales__c.field-meta.xml
<CustomField>
    <fullName>Active_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this user an active Salesperson?</description>
    <inlineHelpText>Is this user an active Salesperson?</inlineHelpText>
    <label>Active Sales?</label>
    <type>Checkbox</type>
</CustomField>