metadata/force-app/main/default/objects/User/fields/Active_Solutions__c.field-meta.xml
<CustomField>
    <fullName>Active_Solutions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this user an active Sales Engineer?</description>
    <inlineHelpText>Is this user an active Sales Engineer?</inlineHelpText>
    <label>Active Solutions?</label>
    <type>Checkbox</type>
</CustomField>