metadata/force-app/main/default/objects/User/fields/BDR_Team__c.field-meta.xml
<CustomField>
    <fullName>BDR_Team__c</fullName>
    <label>BDR Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>US/CA</fullName>
            </value>
            <value>
                <fullName>US CDR</fullName>
            </value>
            <value>
                <fullName>EMEA CDR</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>