metadata/force-app/main/default/objects/User/fields/Company_Size_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Company_Size_Allocation__c</fullName>
    <description>What company size does this AE work on?</description>
    <inlineHelpText>What company size does this AE work on?</inlineHelpText>
    <label>Company Size Allocation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ent/Strat</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Mid-Market</fullName>
            </value>
            <value>
                <fullName>SMB</fullName>
            </value>
            <value>
                <fullName>SMB/MM</fullName>
            </value>
            <value>
                <fullName>Strategic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>