metadata/force-app/main/default/objects/User/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <description>Indicates the contract type of the user.</description>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Fixed term</fullName>
            </value>
            <value>
                <fullName>Freelance</fullName>
            </value>
            <value>
                <fullName>Full Time</fullName>
            </value>
            <value>
                <fullName>Internship</fullName>
            </value>
            <value>
                <fullName>Long Term Disability</fullName>
            </value>
            <value>
                <fullName>Part Time - Fixed</fullName>
            </value>
            <value>
                <fullName>Part Time - Indefinite</fullName>
            </value>
            <value>
                <fullName>Short Term Disability</fullName>
            </value>
            <value>
                <fullName>Temporary - Full Time</fullName>
            </value>
            <value>
                <fullName>Temporary - Part Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>