metadata/force-app/main/default/objects/User/fields/days_created_ago__c.field-meta.xml
<CustomField>
    <fullName>days_created_ago__c</fullName>
    <formula>Today () -  Contract_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># days employed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>