metadata/force-app/main/default/objects/User/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>Department and Region of User (for Sales Ops Budgeting)</description>
    <label>Budget Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>US Sales</fullName>
            </value>
            <value>
                <fullName>EMEA Sales</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>EMEA CSM</fullName>
            </value>
            <value>
                <fullName>US CSM</fullName>
            </value>
            <value>
                <fullName>EMEA SAM</fullName>
            </value>
            <value>
                <fullName>US SAM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>