metadata/force-app/main/default/objects/User/fields/DoA_Approver__c.field-meta.xml
<CustomField>
    <fullName>DoA_Approver__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BODEV-4166 Review the validation rule for Close date in the past on opportunity
Created this field to bypass DoA Approvers from the Close date Validation Rule</description>
    <label>DoA Approver</label>
    <type>Checkbox</type>
</CustomField>