metadata/force-app/main/default/objects/User/fields/Employment_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Employment_End_Date__c</fullName>
    <description>BODEV-2979 : Used for commissions and other reporting.</description>
    <label>Employment End Date</label>
    <type>Date</type>
</CustomField>