metadata/force-app/main/default/objects/User/fields/Fire_Pool_Model__c.field-meta.xml
<CustomField>
    <fullName>Fire_Pool_Model__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fire Pool Model</label>
    <type>Checkbox</type>
</CustomField>