metadata/force-app/main/default/objects/User/fields/Inbound_Outbound_BDR__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Outbound_BDR__c</fullName>
    <label>Inbound/Outbound BDR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound Marketing</fullName>
            </value>
            <value>
                <fullName>Outbound Marketing</fullName>
            </value>
            <value>
                <fullName>Hybrid Inbound/Outbound</fullName>
            </value>
            <value>
                <fullName>Outbound - Mid-Market</fullName>
            </value>
            <value>
                <fullName>Outbound - Enterprise</fullName>
            </value>
            <value>
                <fullName>Outbound Sales</fullName>
                <isActive>false</isActive>
                <label>Outbound Sales</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>