metadata/force-app/main/default/objects/User/fields/KPI_1_New_contracted_ARR__c.field-meta.xml
<CustomField>
    <fullName>KPI_1_New_contracted_ARR__c</fullName>
    <description>Commission rates
New contracted ARR x% of 1st year ARR</description>
    <label>KPI-1 New contracted ARR %</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>