metadata/force-app/main/default/objects/User/fields/KPI_2_On_new_contracted_strategic_expans__c.field-meta.xml
<CustomField>
    <fullName>KPI_2_On_new_contracted_strategic_expans__c</fullName>
    <description>Commission rates
On new contracted strategic expansion of existing customers x%	of 1st year ARR</description>
    <label>KPI-2 On new contracted strategic expans</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>