metadata/force-app/main/default/objects/User/fields/KPI_3_On_new_contracted_upsells_of_exist__c.field-meta.xml
<CustomField>
    <fullName>KPI_3_On_new_contracted_upsells_of_exist__c</fullName>
    <description>Commission rates
On new contracted upsells of existing customers x% of 1st year ARR</description>
    <label>KPI-3 On new contracted upsells of exist</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>