metadata/force-app/main/default/objects/User/fields/Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID__c</fullName>
    <label>User Legacy ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>