metadata/force-app/main/default/objects/User/fields/Not_Synced_to_Spiff__c.field-meta.xml
<CustomField>
    <fullName>Not_Synced_to_Spiff__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BO-1197</description>
    <label>Not Synced to Spiff</label>
    <type>Checkbox</type>
</CustomField>