metadata/force-app/main/default/objects/User/fields/Open_CTA_count__c.field-meta.xml
<CustomField>
    <fullName>Open_CTA_count__c</fullName>
    <description>Stores the number of open CTAs</description>
    <label>Open CTA count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>