metadata/force-app/main/default/objects/User/fields/Part_of_WD_Success_Squad__c.field-meta.xml
<CustomField>
    <fullName>Part_of_WD_Success_Squad__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when part of Webdam&apos;s Success Squad</description>
    <label>Part of WD Success-Squad</label>
    <type>Checkbox</type>
</CustomField>