metadata/force-app/main/default/objects/User/fields/Position_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Position_End_Date__c</fullName>
    <description>For internal promotions: date individual left previous position. Used for Sales/BDR teams.</description>
    <inlineHelpText>For internal promotions: date individual left previous position.</inlineHelpText>
    <label>Position End Date</label>
    <type>Date</type>
</CustomField>