metadata/force-app/main/default/objects/User/fields/Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Profile_Name__c</fullName>
    <description>BODEV-1967: Formula text field to show Profile Name for easy retrieval via Athena to Sisense</description>
    <formula>IF(
  CASESAFEID(Profile.Id) = &apos;00eU0000000iBVCIA2&apos;,
  &quot;System Administrator&quot;,
  Profile.Name
)

/* Known Issue: System Administrator appears as &quot;PT1&quot; with Profile.Name. So tweaked it with ID */</formula>
    <label>Profile Name</label>
    <type>Text</type>
</CustomField>