metadata/force-app/main/default/objects/User/fields/Role_Name__c.field-meta.xml
<CustomField>
    <fullName>Role_Name__c</fullName>
    <description>BODEV-1967: Formula text field to show Role Name for easy retrieval via Athena to Sisense</description>
    <formula>UserRole.Name</formula>
    <label>Role Name</label>
    <type>Text</type>
</CustomField>