metadata/force-app/main/default/objects/User/fields/Sales_Team__c.field-meta.xml
<CustomField>
    <fullName>Sales_Team__c</fullName>
    <description>Which Sales Team is this user in?</description>
    <inlineHelpText>Which Sales Team is this user in?</inlineHelpText>
    <label>Sales Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>