metadata/force-app/main/default/objects/User/fields/Selected_UAT_User__c.field-meta.xml
<CustomField>
    <fullName>Selected_UAT_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the user is selected for UAT with a limited group in prod.</description>
    <inlineHelpText>Indicates the user is selected for UAT with a limited group in prod.</inlineHelpText>
    <label>Selected UAT User</label>
    <type>Checkbox</type>
</CustomField>