metadata/force-app/main/default/objects/User/fields/Share_RFP_to_Slack__c.field-meta.xml
<CustomField>
    <fullName>Share_RFP_to_Slack__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is created to control the visibility of the &quot;Send to Slack&quot; button in the RFP object, only users with this checkbox checked will be able to see the button</description>
    <label>Share RFP to Slack?</label>
    <type>Checkbox</type>
</CustomField>