metadata/force-app/main/default/objects/User/fields/User_ID_18_digits__c.field-meta.xml
<CustomField>
    <fullName>User_ID_18_digits__c</fullName>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User ID (18 digits)</label>
    <type>Text</type>
</CustomField>