metadata/force-app/main/default/objects/User/fields/Webdam_Bynder_Source__c.field-meta.xml
<CustomField>
    <fullName>Webdam_Bynder_Source__c</fullName>
    <label>Webdam/Bynder Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Webdam</fullName>
            </value>
            <value>
                <fullName>Bynder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>