metadata/force-app/main/default/objects/User/fields/Webdam_Bynder_SourceF__c.field-meta.xml
<CustomField>
    <fullName>Webdam_Bynder_SourceF__c</fullName>
    <formula>IF(ISBLANK(Legacy_ID__c),&quot;Bynder&quot;,&quot;Webdam&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Webdam/Bynder Source</label>
    <type>Text</type>
</CustomField>