metadata/force-app/main/default/objects/User/fields/Work_Location__c.field-meta.xml
<CustomField>
    <fullName>Work_Location__c</fullName>
    <description>Office where the user works.</description>
    <inlineHelpText>Office where the user works.</inlineHelpText>
    <label>Work Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Office</valueSetName>
    </valueSet>
</CustomField>